added meta tag for search engines

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Meta tags for search engine-->
+    <meta name="description" content="Love Running - A community for running enthusiasts.">
+    <meta name="keywords" content="running, community, fitness, health, sports">
     <title>Love Running</title>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
