--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
 </head>
 
 <body>
-
+    <!-- Header -->
+     <header> Header </header>
+    
+     <!-- Main content -->
+     <main>Main Content</main>
+    
+     <!-- Footer -->
+     <footer> Footer </footer>
 </body>
 
 </html>
