--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Meta tags for search engine-->
-    <meta name="description" content="Love Running - A community for running enthusiasts.">
-    <meta name="keywords" content="running, community, fitness, health, sports">
+    <!-- Meta tags for search engines -->
+    <meta name="description"
+        content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
+    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
+    <!-- Title -->
     <title>Love Running</title>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
@@ -18,26 +21,26 @@
 
 <body>
     <!-- Header -->
-     <header>
+    <header>
         <a href="index.html">
             <h1 id="logo">Love Running</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-icon">X</label>
+        <label for="nav-toggle" class="nav-toggle-label">X</label>
         <nav>
             <ul id="menu">
-                <li><a href="#" class="active">Home</a></li>
-                <li><a href="#">Gallery</a></li>
-                <li><a href="#">Sign Up</a></li>
+                <li><a href="" class="active">Home</a></li>
+                <li><a href="">Gallery</a></li>
+                <li><a href="">Sign Up</a></li>
             </ul>
         </nav>
-     </header>
-    
-     <!-- Main content -->
-     <main>Main Content</main>
-    
-     <!-- Footer -->
-     <footer> Footer </footer>
+    </header>
+
+    <!-- Main content -->
+    <main>Main content</main>
+
+    <!-- Footer -->
+    <footer>Footer</footer>
 </body>
 
 </html>
